Lsh implemented. No test has been made

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,18 @@ set(cluster
         "src/Util.cpp"
         "src/ClusterMaster.cpp"
         "src/Cluster.cpp"
-        "src/cluster.cpp")
+        "src/cluster.cpp"
+        "src/lsh/EucledianHashTable.cpp"
+        "src/lsh/hashFunction.cpp"
+        "src/lsh/HashNode.cpp"
+        "src/lsh/cosineHashfunction.cpp"
+        "src/lsh/AHashTable.cpp"
+        "src/lsh/CosineHashTable.cpp"
+        "src/hypercube/CosineHypercube.cpp"
+        "src/hypercube/CubeEdge.cpp"
+        "src/hypercube/BinaryMap.cpp"
+        "src/hypercube/AHypercube.cpp"
+        "src/hypercube/EucledianHypercube.cpp"
+        "src/lsh/lsh.cpp")
 
 add_executable(cluster ${cluster})
